<resources>
    <string name="app_name">Prototype</string>
    <string name="selBatiment">Sélectionner un bâtiment en cliquant dessus</string>
    <string name="selEtage">Sélectionner un étage en cliquant dessus</string>
    <string name="selSalle">Cliquez sur une salle pour voir ses informations</string>
    <string name="btn_rech">Rechercher une salle</string>
    <string name="batiment">Bâtiment</string>
    <string name="selectionne">sélectionné</string>
    <string name="infosalle">Information sur la salle</string>
    <string name="equipements">Equipements disponible :</string>
    <string name="capacite">Capacité : 15 personnes</string>
    <string name="disponibilité">Voir les disponibilités</string>
    <string name="reserversalle">Réserver la salle</string>
    <string name="le">Le :</string>
    <string name="de">De :</string>
    <string name="a">à :</string>
    <string name="categorie">Catégorie :</string>
    <string name="nom">Nom :</string>
    <string name="description">Description :</string>
    <string name="repetition">Répétition :</string>
    <string name="hebdo">Hebdomadaire</string>
    <string name="mensuel">Mensuel</string>
    <string name="finRepetition">Fin répétition</string>
    <string name="reservation_effectue">Votre réservation a été accepté !</string>
    <string name="retour_acceuil">Retourner à l\'accueil</string>
    <string name="option">Option :</string>
    <string name="champ_etage">Etage :</string>
    <string name="champ_batiment">Bâtiment :</string>
    <string name="rechercher">Rechercher</string>
    <string name="resultat_rech">Résultat de la recherche</string>
    <string name="mes_reserv">Mes réservations</string>
    <string name="reservation1">Réservation 1</string>

    <string-array name="categorie">
        <item>Catégorie</item>
        <item>Cours</item>
        <item>Travaux</item>
        <item>Réunion</item>
        <item>...</item>
    </string-array>

    <string-array name="option">
        <item>Video projecteur</item>
        <item>Salle informaique</item>
        <item>...</item>
    </string-array>

    <string-array name="resultRecherche">
        <item>Salle 1</item>
        <item>Salle 2</item>
        <item>Salle 3</item>
        <item>Salle 6</item>
        <item>Salle 8</item>
    </string-array>

    <string-array name="mesReserv">
        <item>Réservation 1</item>
        <item>Réservation 2</item>
    </string-array>

</resources>