<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns="1"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/titre_rechercher_salle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rech"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TableRow>
        <TextView
            android:id="@+id/texte_le_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_le_recherche"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/texte_de_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_de_recherche"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/texte_a_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_a_recherche"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/texte_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"
            android:layout_column="0"/>

        <Spinner
            android:id="@+id/option_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/texte_batiment_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champ_batiment"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_batiement_recherche"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/texte_etage_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champ_etage"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_etage_recherche"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow>
        <Button
            android:id="@+id/button_id"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/rechercher"
            android:layout_column="1" />
    </TableRow>

</TableLayout>