<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info_salle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/infosalle"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/equipements"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="               - Ordinateurs"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="               - Videoprojecteur"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="               - ..."/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:text="@string/capacite"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disponibilité"
        android:layout_marginTop="250dp"
        android:onClick="reserverSalle"/>

</LinearLayout>