<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:stretchColumns="1"
    android:layout_margin="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/info_salle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reservation1"
            android:layout_column="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Modifier"
            android:layout_marginTop="50dp"
            android:layout_column="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/texte_le"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/le"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_le"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"
            android:enabled="false"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/texte_de"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_de"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/texte_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_a"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/texte_nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_nom"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/texte_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_column="0"/>

        <EditText
            android:id="@+id/input_desc"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_column="1"/>
    </TableRow>

</TableLayout>